# Model-Based-MCP

./: CLAUDE.md  pyproject.toml
examples/: README.md  color-codes.yaml  concurrency-test.yaml  etymology-factory.yaml  interview-sim.yaml  network-container-spacing-demo.yaml  rhode-architecture.yaml  risk-chain.yaml  turing-machine.yaml
schema/draft/: schema.ts
scripts/: install.sh
src/model_based_mcp/: __init__.py  models.py  organize.py  parser.py  renderer.py  server.py
