[project]
name = "model-based-mcp"
version = "0.1.0"
description = "MCP server for creating SysML/MBSE diagrams as PNGs — Block Definition Diagrams, Internal Block Diagrams, and more"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pydantic>=2.0",
]

[project.scripts]
model-based-mcp = "model_based_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_based_mcp"]
